deploy/sealos/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: ns-mzyybqj8
  labels:
    cloud.sealos.io/app-deploy-manager: video-3d-reconstruction
  annotations:
    deploy.cloud.sealos.io/maxReplicas: "1"
    deploy.cloud.sealos.io/minReplicas: "1"
    originImageName: ghcr.io/ljx0722/video-3d-reconstruction-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        cloud.sealos.io/app-deploy-manager: video-3d-reconstruction
    spec:
      containers:
        - name: frontend
          image: ghcr.io/ljx0722/video-3d-reconstruction-frontend:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ns-mzyybqj8
  labels:
    cloud.sealos.io/app-deploy-manager: video-3d-reconstruction
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
