deploy/sealos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: video2gauss
  namespace: ns-mzyybqj8
  labels:
    cloud.sealos.io/app-deploy-manager: video2gauss
    cloud.sealos.io/app-deploy-manager-domain: video2gauss
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/proxy-body-size: "2048m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "64k"
    nginx.ingress.kubernetes.io/server-snippet: |
      client_header_buffer_size 64k;
      large_client_header_buffers 4 128k;
spec:
  tls:
    - hosts:
        - video2gauss.sealoshzh.site
  rules:
    - host: video2gauss.sealoshzh.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: video2gauss
                port:
                  number: 80
